tests/samples/0083/error.txt
error[P0001]: PHP opening tag `<?php` is not supported
  --> 0083/code.ara:1:1
  |
1 | <?php
  | ^^^^^

error[P0004]: case `Foo::Bar` of backed enum `Foo` must have a value
  --> 0083/code.ara:4:10
  |
3 | enum Foo: int {
  |      ---
4 |     case Bar;
  |          ^^^^

error[P0003]: case `Bar::Baz` of unit enum `Bar` cannot have a value
   --> 0083/code.ara:10:10
   |
 9 | enum Bar {
   |      ---
10 |     case Baz = 1;
   |          ^^^^^^^^

error[P0011]: unexpected token `?>`, expected a definition
   --> 0083/code.ara:17:1
   |
17 | ?>
   | ^^

error: failed to parse "0083/code.ara" due to the above issue(s)
 = summary: 4 error(s)

